# SfVOST

./: .gitignore  ISentiment.py  NEWS.md  README.md  SfVOST-GUI.py  SfVOST_LLM.py  SocNetwork.py  dezinformace.py  ner-cli.py  ner.py  ner_CZ.py  pyproject.toml  sentiment-cli.py  sentiment.py  sentiment_BERT_multi.py  sentiment_Czert_B.py  utils.py
data/: ISO639.csv  postFiala.json  postFiala_ner.json  postFiala_sentiment.json  postIran.json  postIran_dezinfor.json  postIran_ner.json  postIran_sentiment.json  vost_template.Rmd  vost_template.html
skills/: prompt.md
sql/: setup_db.sql
src/: BlueSky.py  INER.py  ner.py  ner_BERT_EN.py  ner_CZ.py  sentiment.py  sentiment_BERT_multi.py  sentiment_Czert_B.py  utils.py
template/: config.ini  keywords_Fiala.csv  keywords_povodne.csv  keywords_pozary.csv  keywords_slovensko.csv  keywords_test.csv
