[project]
name = "mutina-dp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "atproto>=0.0.65",
    "langdetect>=1.0.9",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pymysql>=1.1.2",
    "pyqt6>=6.10.2",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
]
